# Largada_F1

./: ATIVIDADE_REVISAO.c  CMakeLists.txt  README.md
